2016-05-22 自定义控件 1、listActivity

--- a/app/src/main/res/layout/check_list_item.xml
+++ b/app/src/main/res/layout/check_list_item.xml
@@ -8,6 +8,7 @@
         android:layout_gravity="right|center_vertical"
         android:clickable="false"
         android:focusable="false"
+        android:button="@drawable/item_selector"
         />
     <LinearLayout
         android:layout_width="match_parent"
