--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,14 @@
         android:layout_toRightOf="@id/btn_animation"
         android:id="@+id/btn_list"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Point"
+        android:layout_margin="10dp"
+        android:layout_toRightOf="@id/btn_list"
+        android:id="@+id/btn_point"
+        />
     <TextView
         android:id="@+id/tv"
         android:layout_width="100dp"
@@ -25,5 +33,11 @@
         android:background="#ff00ff"
         android:text="Hello World!"
         android:layout_centerInParent="true"
+        />
+    <com.example.rocky.userdefined.list.MyPointView
+        android:id="@+id/my_point_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_list"
         />
 </RelativeLayout>
