--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="加载URL"
+        android:textColor="@color/button_text"
         android:layout_alignParentTop="true"
         android:id="@+id/btn_url"
         />
